<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tayyab.packagesltdmess.CustomRectangularButtonsMenu">

    <Button
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/monday"
        android:id="@+id/mondaybutton"
        android:background="@drawable/custom_button1"
        android:textColor="@android:color/white"
        android:onClick="MondayButtonPressed"
        android:layout_below="@+id/imageView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/tuesday"
        android:id="@+id/tuesdaybutton"

        android:layout_alignTop="@+id/mondaybutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/custom_button1"
        android:textColor="@android:color/white"
        android:onClick="TuesdayButtonPressed"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/wednesday"
        android:id="@+id/wednesdaybutton"
        android:background="@drawable/custom_button1"
        android:layout_below="@+id/mondaybutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:onClick="WednesdayButtonPressed"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/thursday"
        android:id="@+id/thursdaybutton"
        android:layout_alignTop="@+id/wednesdaybutton"
        android:layout_alignRight="@+id/tuesdaybutton"
        android:layout_alignEnd="@+id/tuesdaybutton"
        android:background="@drawable/custom_button1"
        android:textColor="@android:color/white"
        android:onClick="ThursdayButtonPressed"
        />

    <Button
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="Friday"
        android:id="@+id/fridaybutton"
        android:background="@drawable/custom_button1"
        android:layout_below="@+id/wednesdaybutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:onClick="FridayButtonPressed"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/saturday"
        android:id="@+id/saturdaybutton"
        android:layout_alignTop="@+id/fridaybutton"
        android:layout_alignLeft="@+id/thursdaybutton"
        android:layout_alignStart="@+id/thursdaybutton"
        android:background="@drawable/custom_button1"
        android:textColor="@android:color/white"
        android:onClick="SaturdayButtonPressed"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/sunday"
        android:id="@+id/sundaybutton"

        android:layout_below="@+id/fridaybutton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button1"
        android:onClick="SundayButtonPressed"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/imageView9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/logo3" />

    <TextView
        android:layout_marginTop="20dp"
        android:textColor="#005eff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Mess Schedule"
        android:id="@+id/txtmessschedule"
        android:textStyle="bold"
        android:layout_alignTop="@+id/imageView9"
        android:layout_toRightOf="@+id/mondaybutton"
        android:layout_toEndOf="@+id/mondaybutton" />

</RelativeLayout>
