<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tayyab.packagesltdmess.EnlistMenuinDatabse">


    <TextView
        android:layout_marginTop="20dp"
        android:textColor="#005eff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_new_recipes"
        android:id="@+id/txtNewRecipes"
        android:textStyle="bold"
        android:layout_alignTop="@+id/imageView7"
        android:layout_alignLeft="@+id/btnaddrecipe"
        android:layout_alignStart="@+id/btnaddrecipe" />
    <EditText
        android:textColorHint="#008080"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:hint="Pick Day"
        android:id="@+id/editDayfromAdd"
        android:layout_below="@+id/imageView7"
        android:layout_alignLeft="@+id/addrecipe1"
        android:layout_alignStart="@+id/addrecipe1"
        android:layout_marginTop="32dp" />

    <EditText
        android:textColorHint="#008080"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:hint="and Date"
        android:id="@+id/editDatefromAdd"
        android:layout_alignTop="@+id/editDayfromAdd"
        android:layout_toRightOf="@+id/editDayfromAdd"
        android:layout_toEndOf="@+id/editDayfromAdd" />

    <Button
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button1"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:id="@+id/PickThingsFromAddbtn"
        android:layout_alignTop="@+id/editDatefromAdd"
        android:layout_toRightOf="@+id/editDatefromAdd"
        android:layout_toEndOf="@+id/editDatefromAdd"
        android:text=": :" />

    <EditText
        android:textColorHint="#008080"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_1"
        android:id="@+id/addrecipe1"

        android:layout_marginTop="98dp"
        android:layout_below="@+id/imageView7"
        android:layout_alignLeft="@+id/addrecipe2"
        android:layout_alignStart="@+id/addrecipe2" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_2"
        android:id="@+id/addrecipe2"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/addrecipe1"
        android:layout_alignLeft="@+id/addrecipe3"
        android:layout_alignStart="@+id/addrecipe3"
        android:textColorHint="#008080"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/addrecipe3"
        android:hint="@string/recipe_3"
        android:layout_below="@+id/addrecipe2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColorHint="#008080"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnaddrecipe"
        android:onClick="saveNewRecipeinDatabase"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button1"
        android:layout_alignTop="@+id/btndeletefromAddScreen"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:onClick="DeleteFromAddScreen"
        android:id="@+id/btndeletefromAddScreen"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button1"
        android:layout_below="@+id/addrecipe3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        android:id="@+id/button"
        android:onClick="UpdateFromAddScreen"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button1"
        android:layout_below="@+id/addrecipe3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/imageView7"
        android:src="@drawable/logo3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />



</RelativeLayout>
