<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tayyab.packagesltdmess.MainActivity">

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/employee_no"
        android:textColorHint="#008080"
        android:id="@+id/employeeno1"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"

       />

    <EditText
        android:textColorHint="#008080"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/psw1"
        android:layout_below="@+id/employeeno1"
        android:layout_alignLeft="@+id/employeeno1"
        android:layout_alignStart="@+id/employeeno1"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginbutton1"
        android:layout_marginTop="70dp"
        android:onClick="userLogin"
        android:background="@drawable/custom_button1"
        android:textColor="@android:color/white"
        android:layout_below="@+id/psw1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textColor="#005eff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Admin Login"
        android:id="@+id/txtlogin1"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignRight="@+id/employeeno1"
        android:layout_alignEnd="@+id/employeeno1"
        android:layout_marginTop="20dp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/imageView2"
        android:src="@drawable/logo3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>

