<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tayyab.packagesltdmess.UpdateRecipesInDatabse">

    <Button

        android:text="@string/update"
        android:id="@+id/btnUpdateRecipes1"
        android:onClick="UpdateRecipesInDB"
        android:layout_below="@+id/UpdateRecipe3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button1"/>

    <TextView

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/update_recipes"
        android:id="@+id/txtUpdateRecipes1"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#005eff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView5"
        android:layout_alignRight="@+id/UpdateRecipe1"
        android:layout_alignEnd="@+id/UpdateRecipe1" />
    <EditText
        android:textColorHint="#008080"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:hint="Pick Day"
        android:id="@+id/editDayInupdate"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignLeft="@+id/UpdateRecipe1"
        android:layout_alignStart="@+id/UpdateRecipe1" />

    <EditText
        android:textColorHint="#008080"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:hint="and Date"
        android:id="@+id/editDateInUpdate"
        android:layout_alignBottom="@+id/editDayInupdate"
        android:layout_toRightOf="@+id/editDayInupdate"
        android:layout_toEndOf="@+id/editDayInupdate" />

    <Button
        android:textColor="@android:color/white"
        android:background="@drawable/custom_button1"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:id="@+id/PickDateDayInUpdateBtn"
        android:layout_alignTop="@+id/editDateInUpdate"
        android:layout_toRightOf="@+id/editDateInUpdate"
        android:layout_toEndOf="@+id/editDateInUpdate"
        android:text=": :" />


    <EditText
        android:textColorHint="#008080"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_1"
        android:id="@+id/UpdateRecipe1"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/editDayInupdate"
        android:layout_centerHorizontal="true" />

    <EditText
        android:textColorHint="#008080"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/UpdateRecipe2"
        android:hint="Recipe 2"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/UpdateRecipe1"
        android:layout_alignLeft="@+id/UpdateRecipe1"
        android:layout_alignStart="@+id/UpdateRecipe1" />

    <EditText
        android:textColorHint="#008080"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/UpdateRecipe3"
        android:hint="Recipe 3"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/UpdateRecipe2"
        android:layout_alignLeft="@+id/UpdateRecipe2"
        android:layout_alignStart="@+id/UpdateRecipe2" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:id="@+id/imageView5"
        android:src="@drawable/logo3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>
